# MSOE_CS4981_Final_Project

./: README.md
gpu/: CMakeLists.txt  main.cu
src/: small_mc.c
